# blog

./: .gitignore  README.adoc  README.md  style.css
.github/workflows/: action.yml
articles/: homelab.md
blog/: pyproject.toml
blog/src/: article_processor.py  config.py  main.py
blog/src/templates/: article.j2
pages/: description.txt  nav.adoc
pages/posts/Tech/: 01-Writing_a_DNS_Server_in_Rust-description.txt  01-Writing_a_DNS_Server_in_Rust.adoc
pages/posts/Tech/01-Writing_a_DNS_Server_in_Rust/: dns_message.packetdiag  dns_message_header.packetdiag  dns_question.packetdiag  dns_rr.packetdiag
