[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My blog, using AWS S3 to statically serve content and python-markdown to render posts."
authors = ["Enid <143949913+enidisepic@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.4.4"
jinja2 = "^3.1.2"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
